🐞 fix: 修复Button在点击时的蓝框问题、去除Button长按选择问题

--- a/packages/mobile/src/button/src/button.less
+++ b/packages/mobile/src/button/src/button.less
@@ -23,6 +23,8 @@
     border-radius: var(--pk-radius-m);
     box-shadow: none;
     color: var(--pk-text-color-invert);
+    -webkit-tap-highlight-color: transparent;
+    user-select: none;
 
     &::after {
         position: absolute;
