🐞 fix: 修复ios下Icon出现蓝框效果的问题

--- a/packages/mobile/src/icon/src/icon.less
+++ b/packages/mobile/src/icon/src/icon.less
@@ -10,6 +10,7 @@
 .@{namespace} {
     font-size: var(--pk-icon-size);
     color: var(--pk-icon-color);
+    -webkit-tap-highlight-color: transparent;
 
     &.@{namespace}__image {
         width: var(--pk-icon-image-size);
