🐞 fix: 修复ios Tag点击的高亮效果

--- a/packages/mobile/src/tag/src/tag.less
+++ b/packages/mobile/src/tag/src/tag.less
@@ -32,6 +32,7 @@
     color: var(--pk-text-color-invert);
     position: relative;
     align-items: center;
+    -webkit-tap-highlight-color: transparent;
 
     &__content {
         font-size: inherit;
