--- a/packages/mobile/src/radio/src/radio.less
+++ b/packages/mobile/src/radio/src/radio.less
@@ -23,6 +23,7 @@
     margin-bottom: var(--pk-radio-margin);
     width: fit-content;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 
     &__box {
         --pk-icon-size: calc(var(--pk-radio-size) * 0.7);
