--- a/packages/mobile/src/switch/src/switch.less
+++ b/packages/mobile/src/switch/src/switch.less
@@ -23,6 +23,7 @@
     transition: background var(--pk-switch-transition-duration) var(--pk-switch-transition-fn);
     position: relative;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 
     &__slide {
         background: var(--pk-bg-color);
