--- a/packages/mobile/src/field/src/field.less
+++ b/packages/mobile/src/field/src/field.less
@@ -18,6 +18,7 @@
 
         .@{cell-namespace}__value {
             padding: 0;
+            -webkit-tap-highlight-color: transparent;
         }
     }
 
