--- a/packages/mobile/theme/index.less
+++ b/packages/mobile/theme/index.less
@@ -65,7 +65,7 @@
 
     --pk-overlay-bg-color: rgba(0, 0, 0, 0.7);
     --pk-toast-bg-color: rgba(0, 0, 0, 0.7);
-    --pk-toast-text-color: var(--pk-text-color-invert);
+    --pk-toast-text-color: #FFFFFF;
 
     // 层级
     --pk-z-index-min: 1;
