--- a/packages/mobile/theme/index.less
+++ b/packages/mobile/theme/index.less
@@ -54,6 +54,7 @@
     //背景颜色
     --pk-bg-color: #FFFFFF;
     --pk-bg-invert: #000000;
+    --pk-bg-color-light: #edeff2;
     --pk-inactive-bg-color: #b9bec5;
 
     --pk-overlay-bg-color: rgba(0, 0, 0, 0.7);
